<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".CheckerActivity">

    <EditText
        android:id="@+id/password_input"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/psw"
        android:inputType="textPassword"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toStartOf="@+id/strength_level_txt"
        app:layout_constraintHorizontal_weight="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/hide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/password_input"
        app:layout_constraintEnd_toEndOf="@+id/password_input"
        app:layout_constraintTop_toTopOf="@+id/password_input"
        app:srcCompat="@drawable/ic_invisible"
        app:tint="@color/grey" />

    <TextView
        android:id="@+id/strength_level_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/password_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/password_input"
        app:layout_constraintTop_toTopOf="@+id/password_input" />

    <View
        android:id="@+id/strength_level_indicator"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="6dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="@+id/strength_level_txt"
        app:layout_constraintStart_toStartOf="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/strength_level_indicator"
        tools:layout_editor_absoluteX="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <ImageView
                    android:id="@+id/lowerCase_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/check_ic"
                    app:tint="@color/grey" />

                <TextView
                    android:id="@+id/lowerCase_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/lowercase_letters"
                    android:textColor="@color/grey" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <ImageView
                    android:id="@+id/upperCase_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/check_ic"
                    app:tint="@color/grey" />

                <TextView
                    android:id="@+id/upperCase_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/uppercase_letters"
                    android:textColor="@color/grey" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/digit_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/check_ic"
                    app:tint="@color/grey" />


                <TextView
                    android:id="@+id/digit_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/digits"
                    android:textColor="@color/grey" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">


                <ImageView
                    android:id="@+id/specialChar_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/check_ic"
                    app:tint="@color/grey" />

                <TextView
                    android:id="@+id/specialChar_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/special_characters"
                    android:textColor="@color/grey" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/characters_containing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_0_characters_containing"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/txv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/time_to_crack_your_password"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/review"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/review" />

    <TextView
        android:id="@+id/crackingTimeEstimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/grey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txv"
        app:layout_constraintStart_toStartOf="@+id/txv"
        app:layout_constraintTop_toBottomOf="@+id/txv" />

    <TextView
        android:id="@+id/review"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txv"
        app:layout_constraintTop_toBottomOf="@+id/characters_containing" />


    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:enabled="false"
        android:layout_marginTop="20dp"
        android:text="@string/test"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review" />


</androidx.constraintlayout.widget.ConstraintLayout>